* [Bug 1142] nodebug builds shed no light on -d, -D option failure.
* [Bug 1179] point out the problem with -i/--jaildir and -u/--user when
  they are disabled by configure.
* [Bug 1343] sntp doesn't link on Solaris 7, needs -lresolv.
(4.2.5p246-RC) 2009/11/17 Released by Harlan Stenn <stenn@ntp.org>
* Upgrade to autogen-5.10
* [Bug 1378] Unnecessary resetting of peers during interface update.
* [Bug 1382] p245 configure --disable-dependency-tracking won't build.
* [Bug 1384] ntpq :config core dumped with a blank password.
(4.2.5p245-RC) 2009/11/14 Released by Harlan Stenn <stenn@ntp.org>
* Cleanup from Dave Mills.
* [Bug 1343] sntp illegal C does not compile on Solaris 7.
* [Bug 1381] Version .deps generated include file dependencies to allow
  known dependency-breaking changes to force .deps to be cleaned,
  triggered by changing the contents of deps-ver and/or sntp/deps-ver.
(4.2.5p244-RC) 2009/11/12 Released by Harlan Stenn <stenn@ntp.org>
* keygen.html updates from Dave Mills.
* [Bug 1003] ntpdc unconfig command doesn't prompt for keyid.
* [Bug 1376] Enable authenticated ntpq and ntpdc using newly-available
  digest types.
* ntp-keygen, Autokey OpenSSL build vs. run version mismatch is now a
  non-fatal warning.
(4.2.5p243-RC) 2009/11/11 Released by Harlan Stenn <stenn@ntp.org>
* [Bug 1226] Fix deferred DNS lookups.
* new crypto signature cleanup.
(4.2.5p242-RC) 2009/11/10 Released by Harlan Stenn <stenn@ntp.org>
* [Bug 1363] CID 92 clarify fallthrough case in clk_trimtsip.c
* [Bug 1366] ioctl(TIOCSCTTY, 0) fails on NetBSD *[0-2].* > 3.99.7.
* [Bug 1368] typos in libntp --without-crypto case
* [Bug 1371] deferred DNS lookup failing with INFO_ERR_AUTH.
* CID 87 dead code in ntpq.c atoascii().
* Fix authenticated ntpdc, broken in p240.
* Stub out isc/mem.h, shaving 47k from a MIPS ntpd binary.
* Shrink keyword scanner FSM entries from 64 to 32 bits apiece.
* Documention updates from Dave Mills.
* authkeys.c cleanup from Dave Mills.